--- a/advanced.html
+++ b/advanced.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--Required meta tags-->
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <title>
             Advanced Search
         </title>
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="static/styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body style="margin: 25px;">
         <ul class="nav justify-content-end">
@@ -35,15 +38,15 @@
                 <input size="70" class="col-sm-05" type="text" name="as_eq">
                 <br>
                 <label class="col-sm-2 col-form-label">numbers ranging from:</label>
-                <input size="29" class="col-sm-05" type="text" name="as_nlo">
+                <input size="31" class="col-sm-05" type="text" name="as_nlo">
                 &nbsp;
                 <label>to</label>
                 &nbsp;
-                <input size="29" class="col-sm-05" type="text" name="as_nhi">
+                <input size="31" class="col-sm-05" type="text" name="as_nhi">
             </div>
             <br>
             <br>
-            <input type="submit" value="Advanced Search" style="background-color: #2a7ddb; color: white; padding: 7px; font-weight: 600; font-size: 15px; position: absolute; top: 400px; left: 650px;">
+            <input type="submit" value="Advanced Search" style="background-color: #2a7ddb; color: white; padding: 7px; font-weight: 600; font-size: 15px; position: absolute; top: 400px; left: 750px;">
         </form>
     </body>
 </html>
